--- a/src/app/client/seller/advertisement-manage/advertisement-manage.component.html
+++ b/src/app/client/seller/advertisement-manage/advertisement-manage.component.html
@@ -5,13 +5,13 @@
       Керування товаром № {{("00000000" + advertisementId).slice(-9)}}
     </div>
     <div class="navigation-block">
-      <div class="navigation-item">
-        <input class="manage-mode-radio"
-               type="radio" id="adv-update-input"
-               name="manage-mode" [checked]="mode === 'updating'">
-        <label class="manage-mode-label left-line" for="adv-update-input" (click)="navigateToEditing()">Редагування</label>
-      </div>
-      <div class="vertical-divider"></div>
+<!--      <div class="navigation-item">-->
+<!--        <input class="manage-mode-radio"-->
+<!--               type="radio" id="adv-update-input"-->
+<!--               name="manage-mode" [checked]="mode === 'updating'">-->
+<!--        <label class="manage-mode-label left-line" for="adv-update-input" (click)="navigateToEditing()">Редагування</label>-->
+<!--      </div>-->
+<!--      <div class="vertical-divider"></div>-->
       <div class="navigation-item">
         <input class="manage-mode-radio"
                type="radio" id="adv-discounts-input"
