--- a/src/app/client/seller/seller-statistics/seller-statistics.component.html
+++ b/src/app/client/seller/seller-statistics/seller-statistics.component.html
@@ -46,8 +46,8 @@
 
   <div class="block" *ngIf="statistics.registrationDate !== ''">
     <div class="stat-date-container">Статистика за
-      <app-year-month-picker [startDate]="statistics.registrationDate"
-                             (datePick)="changeMonthStatistics($event)"></app-year-month-picker>
+<!--      <app-year-month-picker [startDate]="statistics.registrationDate"-->
+<!--                             (datePick)="changeMonthStatistics($event)"></app-year-month-picker>-->
     </div>
     <div class="statistic-element">
       <div class="statistic-element-name">Відгуків про магазин</div>
