--- a/src/app/client/common/rating-view/rating-view.component.html
+++ b/src/app/client/common/rating-view/rating-view.component.html
@@ -1,7 +1,20 @@
-<div class="rating-stars">
-  <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 1 stars" [ngClass]="{full_filled: rating >= 1}"></label>
-  <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 2 stars" [ngClass]="{full_filled: rating >= 2}"></label>
-  <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 3 stars" [ngClass]="{full_filled: rating >= 3}"></label>
-  <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 4 stars" [ngClass]="{full_filled: rating >= 4}"></label>
-  <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 5 stars" [ngClass]="{full_filled: rating >= 4.5}"></label>
+<div class="stars-holder" *ngIf="rating != 0">
+  <div class="rating-stars">
+    <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 1 stars"
+           [ngClass]="{full_filled: rating >= 1}"
+    ></label>
+    <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 2 stars"
+           [ngClass]="{full_filled: rating >= 1}"
+    ></label>
+    <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 3 stars"
+           [ngClass]="{full_filled: rating >= 1}"
+    ></label>
+    <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 4 stars"
+           [ngClass]="{full_filled: rating >= 1}"
+    ></label>
+    <label class="full" [ngStyle]="{'font-size': fontSize}" title="Awesome - 5 stars"
+           [ngClass]="{full_filled: rating >= 1}"
+    ></label>
+  </div>
+  <div class="overflow-stars" [ngStyle]="{'width' : getStarsOverflowWidth() + '%'}"></div>
 </div>
