--- a/src/app/client/seller/advertisement-manage/advertisement-discounts/advertisement-discounts.component.html
+++ b/src/app/client/seller/advertisement-manage/advertisement-discounts/advertisement-discounts.component.html
@@ -6,14 +6,19 @@
 </div>
 
 <div class="block">
+  <div class="block-title">
+      На даний момент цей товар не має знижок
+    <!--    <button class="btn">Додати знижку для цих параметрів</button>-->
+  </div>
+</div>
 
+<div class="block" *ngIf="paramValuesWithDiscount.length > 0">
   <div class="block-title">
     <div class="block-title-text">
-      Параметри зі знижками
+      {{advertisement.valuesPriceCounts.length > 1 ? 'Параметри зі знижками' : 'Знижки на цей товар'}}
     </div>
     <!--    <button class="btn">Додати знижку для цих параметрів</button>-->
   </div>
-
   <div class="params-with-discounts-container">
     <app-discounts-view *ngFor="let param of paramValuesWithDiscount" [param]="param"></app-discounts-view>
   </div>
