--- a/src/app/client/seller/advertisement-manage/advertisement-statistics/advertisement-statistics.component.scss
+++ b/src/app/client/seller/advertisement-manage/advertisement-statistics/advertisement-statistics.component.scss
@@ -5,6 +5,34 @@
   margin: 10px 0;
 }
 
+.block-title {
+  font-weight: 900;
+  font-size: 18px;
+  //text-align: center;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.feedbacks-diagrams-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-left: 40px;
+}
+.feedbacks-statistics-container {
+  width: 50%;
+  display: inline-block;
+}
+.feedbacks-statistics-container:not(:last-child) {
+
+  //border-bottom: 2px solid #dbd3d3;
+  padding-bottom: 40px;
+}
+
+.feedbacks-block{
+  padding-left: 50px;
+}
+
 .statistic-element {
   display: flex;
   //justify-content: space-between;
