--- a/src/app/client/side-navigation-menu/side-navigation-menu.component.html
+++ b/src/app/client/side-navigation-menu/side-navigation-menu.component.html
@@ -9,10 +9,6 @@
   </div>
 
 
-  <!--    work-->
-  <!--    <div class="link">-->
-  <!--      <div class="link-title">Країна доставки</div>-->
-  <!--    </div>-->
   <div class="side-nav-item" (click)="openSettingMenu()">
     <div class="user-settings-info-container" [ngClass]="{opened_settings_menu: isOpenedSettingsMenu}">
       <img [src]="userCountry.flag" class="delivery-country-flag">
@@ -144,11 +140,11 @@
       </div>
       <div class="link-title">Сповіщення</div>
     </div>
-    <div class="link" [routerLink]="'seller/statistics'"  (click)="close(null)">
-      <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/combo-chart--v1.png"/>
-      </div>
-      <div class="link-title">Статистика</div>
-    </div>
+<!--    <div class="link" [routerLink]="'seller/statistics'"  (click)="close(null)">-->
+<!--      <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/combo-chart&#45;&#45;v1.png"/>-->
+<!--      </div>-->
+<!--      <div class="link-title">Статистика</div>-->
+<!--    </div>-->
     <div class="link" [routerLink]="'seller/settings'"  (click)="close(null)">
       <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/services.png"/>
       </div>
